--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,63 +1,77 @@
-name: Django Package CI/CD
+name: 🚀 Django Package CI/CD
 
 on:
   push:
-    branches: [ branch ]
+    branches: [ branch ]      # Change to your branch
     tags:
-      - 'v*'
+      - 'v*'              # Publish only on version tags like 'v0.1.0'
   pull_request:
     branches: [ branch ]
 
+env:
+  PYTHON_VERSION: "3.12"
+
 jobs:
   test:
+    name: 🧪 Run Tests
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        python-version: ['3.12']
-        django-version: ['5.2']
+        django-version: [ '5.2' ]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Install uv
-      run: |
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-    - name: Set up Python with uv and create virtual environment
-      run: |
-        uv python install ${{ matrix.python-version }}
-        uv venv
-    - name: Install dependencies
-      run: |
-        uv install "Django~=${{ matrix.django-version }}.0"
-        uv install -e ".[dev]"
-    - name: Lint with flake8
-      run: |
-        uv run flake8 tests
-    - name: Test with pytest
-      run: |
-        uv run pytest --cov
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v3
+
+      - name: ⚡ Install uv (fast package manager)
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
+      - name: 🐍 Setup Python & venv
+        run: |
+          uv python install ${{ env.PYTHON_VERSION }}
+          uv venv
+
+      - name: 📦 Install Dependencies
+        run: |
+          uv pip install "Django~=${{ matrix.django-version }}.0"
+          uv pip install -e ".[dev]"
+
+      - name: 🧹 Run Linter (flake8)
+        run: uv run flake8 .
+
+      - name: ✅ Run Tests (pytest)
+        run: uv run pytest --cov
 
   publish:
+    name: 📦 Publish to PyPI
     needs: test
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Install uv
-      run: |
-        curl -LsSf https://astral.sh/uv/install.sh | sh
-        echo "$HOME/.cargo/bin" >> $GITHUB_PATH
-    - name: Set up Python with uv and create virtual environment
-      run: |
-        uv python install 3.12
-        uv venv
-    - name: Install dependencies
-      run: |
-        uv install build twine
-    - name: Build and publish
-      env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
-      run: |
-        uv run python -m build
-        uv run twine upload dist/*
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v3
+
+      - name: ⚡ Install uv (fast package manager)
+        run: |
+          curl -LsSf https://astral.sh/uv/install.sh | sh
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+
+      - name: 🐍 Setup Python & venv
+        run: |
+          uv python install ${{ env.PYTHON_VERSION }}
+          uv venv
+
+      - name: 📦 Install Build Tools
+        run: uv install build twine
+
+      - name: 🚀 Build & Publish to PyPI
+        env:
+          TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        run: |
+          uv run python -m build
+          uv run twine upload dist/*
